--- a/GroceryTrackerAdminPanel/.classpath
+++ b/GroceryTrackerAdminPanel/.classpath
@@ -26,6 +26,7 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="src/main/java/|src/main/resources/|src/test/java/|src/test/resources/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -37,11 +38,29 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Saurabh Study/Selenium/javabykiran-Selenium-Softwares/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Saurabh Study/Selenium/javabykiran-Selenium-Softwares/jar_files (1)/jcommander-1.82.jar"/>
-	<classpathentry kind="lib" path="C:/Saurabh Study/Selenium/javabykiran-Selenium-Softwares/jar_files (1)/jquery-3.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Saurabh Study/Selenium/javabykiran-Selenium-Softwares/jar_files (1)/testng-7.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/Saurabh Study/Selenium/javabykiran-Selenium-Softwares/jar_files (1)/slf4j-api-1.7.36.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/.m2/repository/org/seleniumhq/selenium/selenium-api/4.19.1/selenium-api-4.19.1.jar" sourcepath="C:/Users/Arsheen Khan/.m2/repository/org/seleniumhq/selenium/selenium-api/4.19.1/selenium-api-4.19.1-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.seleniumhq.selenium"/>
+			<attribute name="maven.artifactId" value="selenium-api"/>
+			<attribute name="maven.version" value="4.19.1"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="src" path="/my-app"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/Selenium_Auto/javabykiran-Selenium-Softwares (2)/javabykiran-Selenium-Softwares/jxl-2.6.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/Selenium_Auto/javabykiran-Selenium-Softwares (2)/javabykiran-Selenium-Softwares/selenium-java-2.46.0-srcs.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/Selenium_Auto/javabykiran-Selenium-Softwares (2)/javabykiran-Selenium-Softwares/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/Selenium_Auto/javabykiran-Selenium-Softwares (2)/javabykiran-Selenium-Softwares/jar_files (1)/jcommander-1.82.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/Selenium_Auto/javabykiran-Selenium-Softwares (2)/javabykiran-Selenium-Softwares/jar_files (1)/jquery-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/Selenium_Auto/javabykiran-Selenium-Softwares (2)/javabykiran-Selenium-Softwares/jar_files (1)/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Arsheen Khan/Selenium_Auto/javabykiran-Selenium-Softwares (2)/javabykiran-Selenium-Softwares/jar_files (1)/testng-7.8.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
